Fix color of privacy-policy-page-link on login screen

--- a/src/css/mo-support-login-screen.scss
+++ b/src/css/mo-support-login-screen.scss
@@ -65,7 +65,8 @@ body.login {
 
   // Links below form
   #backtoblog a,
-  #nav a {
+  #nav a,
+  .privacy-policy-page-link a {
     color: $color_text;
     &:hover {
       color: $color_text_light;
