--- a/src/css/mo-support-login-screen.scss
+++ b/src/css/mo-support-login-screen.scss
@@ -9,14 +9,14 @@ body.login {
   h1 {
     margin: 0 auto 25px auto;
     a {
-      font-size: 13px;
-      display: inline-block;
-      width: auto;
-      height: auto;
-      margin: 0;
-      text-indent: 0;
-      color: $color_text;
-      background: none;
+      font-size: 13px !important;
+      display: inline-block !important;
+      width: auto !important;
+      height: auto !important;
+      margin: 0 !important;
+      text-indent: 0 !important;
+      color: $color_text !important;
+      background: none !important;
       &::before,
       &::after {
         display: block;
