--- a/assets/css/mo-support-dashboard-widget.css
+++ b/assets/css/mo-support-dashboard-widget.css
@@ -1,1 +1,1 @@
-#mo_support .mo-support-tag{display:inline-block;padding:.5em 1em;color:#fff;border-radius:4px;background:#fc431d}#mo_support .mo-support-tag--active{background:#50a831}#mo_support .mo-support-tag--free{background:#007dd7}
+#mo_support .mo-support-tag{background:#fc431d;border-radius:4px;color:#fff;display:inline-block;padding:.5em 1em}#mo_support .mo-support-tag--active{background:#50a831}#mo_support .mo-support-tag--free{background:#007dd7}
